[package]
name = "enum_name"
version = "0.0.1"
edition = "2021"
description = "No import Enum Verient to string conversion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/had2020/enum_name"
homepage = "https://github.com/had2020"
keywords = ["enum", "variant", "stringify", "conversion", "utility"]
categories = ["rust-patterns", "data-structures", "no-std"]
readme = "README.md"
authors = ["Hadrian Lazic <hadrian.lazic@email.com>"]
exclude = ["target/*", "*.lock"]

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
